# ticker-core

./: main.py  pyproject.toml
cli/: main.py
cli/commands/: correlate.py  fetch.py
