[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticker-core"
version = "0.1.0"
description = "CLI to fetch prices and build correlation data"
requires-python = ">=3.10"
dependencies = [
  "yfinance", "numpy", "matplotlib.pyplot"
]

[project.scripts]
ticker-core = "cli.main:main"
